--- a/Clientes/Web/privado/index.html
+++ b/Clientes/Web/privado/index.html
@@ -11,6 +11,32 @@
 ​
 </head>
 <body>
+
+    <!-- Menu -->
+    <nav class="navbar navbar-inverse">
+        <div class="container-fluid">
+            <div class="navbar-header">
+                <a class="navbar-brand" href="#/resumen">
+                    <img alt="Brand" src="...">
+                </a>
+                <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1" aria-expanded="false">
+                    <span class="sr-only">Toggle navigation</span>
+                    <span class="icon-bar"></span>
+                    <span class="icon-bar"></span>
+                    <span class="icon-bar"></span>
+                </button>
+            </div>
+
+            <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
+                <ul class="nav navbar-nav">
+                    <li class="active"><a href="#/incidentes">Incidentes</a></li>
+                    <li><a href="#">Especies</a></li>
+                    <li><a href="#">Reporte</a></li>
+                </ul>
+            </div>
+        </div>
+    </nav>
+
         <!--Load partial views-->
 ​
         <div class="container body-content">
