--- a/Clientes/Web/privado/index.html
+++ b/Clientes/Web/privado/index.html
@@ -5,7 +5,7 @@
     <title>OMMFCM</title>
     <link href="~/favicon.ico" rel="shortcut icon" type="image/x-icon" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link href="https://netdna.bootstrapcdn.com/font-awesome/4.0.3/css/font-awesome.css" rel="stylesheet">
+    <link href="https://netdna.bootstrapcdn.com/font-awesome/4.4.0/css/font-awesome.css" rel="stylesheet">
     <link href="css/bootstrap.min.css" rel="stylesheet" />
     <link href="css/sitio.css" rel="stylesheet" />
 ​
@@ -62,6 +62,7 @@
 ​
     <!-- Load services -->
     <script src="servicios/servicioIncidentes.js"></script>
+    <script src="servicios/servicioEspecies.js"></script>
 ​
     <!-- Load controllers -->
     <script src="controladores/controladorIncidentes.js"></script>
