maquetas listas para pruebas de usuario

--- a/Clientes/Web/publico/index.html
+++ b/Clientes/Web/publico/index.html
@@ -5,9 +5,11 @@
     <title>OMMFCM</title>
     <link href="~/favicon.ico" rel="shortcut icon" type="image/x-icon" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link href="https://netdna.bootstrapcdn.com/font-awesome/4.0.3/css/font-awesome.css" rel="stylesheet">
+    <link href="https://netdna.bootstrapcdn.com/font-awesome/4.4.0/css/font-awesome.css" rel="stylesheet">
     <link href="css/bootstrap.min.css" rel="stylesheet" />
     <link href="css/sitio.css" rel="stylesheet" />
+    <link href="css/bootstrap-select.css" rel="stylesheet" />
+    <link href="css/fileinput.min.css" rel="stylesheet" />
 </head>
 <body>
 
@@ -15,7 +17,7 @@
         <div class="container-fluid">
             <div class="navbar-header">
                 <a class="navbar-brand" href="#">
-                    <img alt="Brand" src="...">
+                    <img alt="Brand" src="//placehold.it/100x20">
                 </a>
                 <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1" aria-expanded="false">
                     <span class="sr-only">Toggle navigation</span>
@@ -49,9 +51,10 @@
     </footer>
 
     <!-- 3rd party libraries -->
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js"></script>
     <script src="scripts/angular.min.js"></script>
     <script src="//ajax.googleapis.com/ajax/libs/angularjs/1.2.16/angular-route.min.js"></script>
-    <script src="//code.jquery.com/jquery-1.11.2.min.js"></script>
+
 
     <!-- load app main script -->
     <script src="app.js"></script>
