--- a/Clientes/Web/privado/index.html
+++ b/Clientes/Web/privado/index.html
@@ -8,7 +8,7 @@
     <link href="https://netdna.bootstrapcdn.com/font-awesome/4.4.0/css/font-awesome.css" rel="stylesheet">
     <link href="css/bootstrap.min.css" rel="stylesheet" />
     <link href="css/sitio.css" rel="stylesheet" />
-​
+​    <link href="css/bootstrap-select.css" rel="stylesheet" />
 </head>
 <body>
 
@@ -53,9 +53,12 @@
     </footer>
 ​
     <!-- 3rd party libraries -->
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js"></script>
     <script src="scripts/angular.min.js"></script>
+    <script src="scripts/angular-route.min.js"></script>
+    <script src="scripts/bootstrap.min.js"></script>
+    <script src="scripts/bs-select/bootstrap-select.js"></script>
     <script src="//ajax.googleapis.com/ajax/libs/angularjs/1.2.16/angular-route.min.js"></script>
-    <script src="//code.jquery.com/jquery-1.11.2.min.js"></script>
 ​
     <!-- Load app main script -->
     <script src="app.js"></script>
