--- a/Clientes/Web/privado/vistas/vistaIncidentes.html
+++ b/Clientes/Web/privado/vistas/vistaIncidentes.html
@@ -35,12 +35,12 @@
                 <tr ng-repeat="incidente in incidentes">
                     <th></th>
                     <th>
-                        <select ng-model="incidente.idEspecie" ng-change="modificarIncidente(incidente.idIncidente, incidente.idEspecie)" ng-options='especie.idEspecie as (especie.nombreComun + " - " + especie.nombreCientifico) for especie in especies'>
+                        <select ng-model="incidente.idEspecie" ng-change="modificarIncidente(incidente.idIncidente, incidente.idEspecie)" ng-options='especie.idEspecie as (especie.nombreComun + " - " + especie.nombreCientifico) for especie in especies' class="especie form-control" data-live-search="true">
                         </select> 
                         <a href="" class="btn btn-link"><i class="fa fa-plus fa-2x"></i></span></a>
                     </th>
                     <th> - </th>
-                    <th>{{incidente.idEspecie}}</th>
+                    <th>{{incidente.km}}</th>
                     <th>{{incidente.fecha}}</th>
                     <th><a ng-click="eliminarIncidente(incidente.idIncidente)" class="btn btn-link"><i class="fa fa-trash-o fa-2x"></i></a></th>
                 </tr>
