--- a/Clientes/Web/privado/vistas/vistaIncidentes.html
+++ b/Clientes/Web/privado/vistas/vistaIncidentes.html
@@ -1,4 +1,4 @@
-<div ng-init="actualizarPagina(1)">
+<div ng-init="obtenerEspecies(); actualizarPagina(1)">
     <div class="row">
         <div class="alert alert-danger fade in" ng-show="errores">{{mensaje}}</div>
         <div class="alert alert-success fade in" ng-show="exito">{{mensaje}}</div>
@@ -33,9 +33,9 @@
             </thead>
             <tbody>
                 <tr ng-repeat="incidente in incidentes">
-                    <th></th>
+                    <th><img ng-src="{{incidente.rutaThumbnail}}"></th>
                     <th>
-                        <select ng-model="incidente.idEspecie" ng-change="modificarIncidente(incidente.idIncidente, incidente.idEspecie)" ng-options='especie.idEspecie as (especie.nombreComun + " - " + especie.nombreCientifico) for especie in especies' class="especie form-control" data-live-search="true">
+                        <select ng-model="incidente.idEspecie" ng-change="modificarIncidente(incidente.idIncidente, incidente.idEspecie)" ng-options='especie.idEspecie as (especie.nombreComun + " - " + especie.nombreCientifico) for especie in especies' class="" data-live-search="true">
                         </select> 
                         <a href="" class="btn btn-link"><i class="fa fa-plus fa-2x"></i></span></a>
                     </th>
