esqueleto para el modulo de especies

--- a/Clientes/Web/privado/index.html
+++ b/Clientes/Web/privado/index.html
@@ -30,7 +30,7 @@
             <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
                 <ul class="nav navbar-nav">
                     <li class="active"><a href="#/incidentes">Incidentes</a></li>
-                    <li><a href="#">Especies</a></li>
+                    <li><a href="#/especies">Especies</a></li>
                     <li><a href="#">Reporte</a></li>
                 </ul>
             </div>
