Menu y retro scrolleables

--- a/Clientes/Web/privado/index.html
+++ b/Clientes/Web/privado/index.html
@@ -13,7 +13,7 @@
 <body>
 
     <!-- Menu -->
-    <nav class="navbar navbar-inverse">
+    <nav class="navbar navbar-inverse navbar-fixed-top">
         <div class="container-fluid">
             <div class="navbar-header">
                 <a class="navbar-brand" href="#/resumen">
@@ -39,7 +39,7 @@
 
         <!--Load partial views-->
 ​
-        <div class="container body-content">
+        <div class="container body-content menuScrolleable">
             <div data-ng-view="">
             </div>
         </div>
