--- a/Clientes/Web/privado/vistas/vistaIncidentes.html
+++ b/Clientes/Web/privado/vistas/vistaIncidentes.html
@@ -1,7 +1,7 @@
 <div ng-init="obtenerEspecies(); actualizarPagina(1)">
     <div class="row">
-        <div class="alert alert-danger fade in" ng-show="errores">{{mensaje}}</div>
-        <div class="alert alert-success fade in" ng-show="exito">{{mensaje}}</div>
+        <div class="alert alert-danger fade in retro" ng-show="errores">{{mensaje}}</div>
+        <div class="alert alert-success fade in retro" ng-show="exito">{{mensaje}}</div>
     </div>
     <div class="row">
         <div>
