paginacion de especies

--- a/Clientes/Web/privado/index.html
+++ b/Clientes/Web/privado/index.html
@@ -69,6 +69,7 @@
 ​
     <!-- Load controllers -->
     <script src="controladores/controladorIncidentes.js"></script>
+    <script src="controladores/controladorEspecies.js"></script>
 ​
 </body>
 </html>
