--- a/Clientes/Web/privado/vistas/vistaIncidentes.html
+++ b/Clientes/Web/privado/vistas/vistaIncidentes.html
@@ -31,10 +31,10 @@
                 </tr>
             </thead>
             <tbody>
-                <tr ng-repeat="incidente in incidentes">
+                <tr ng-repeat="incidente in incidentes" ng-init="nombresDeEspecie(incidente.idEspecie)">
                     <td><img ng-src="{{ 'http://148.243.51.170:8007/obsfauna/public_html/imagenes' + (incidente.rutatdumbnail).split('imagenes')[1] }}"></td>
                     <td ng-hide="editando[$index]">
-                        {{incidente.idEspecie}}
+                        {{nombreComun[$index]}} - {{nombreCientifico[$index]}}
                     </td>
                     <td ng-show="editando[$index]">
                         <select ng-model="incidente.idEspecie" ng-options='especie.idEspecie as (especie.nombreComun + " - " + especie.nombreCientifico) for especie in especies' class="" data-live-search="true">
