--- a/Clientes/Web/privado/vistas/vistaEspecies.html
+++ b/Clientes/Web/privado/vistas/vistaEspecies.html
@@ -1,7 +1,7 @@
 <div ng-init="actualizarPagina(1)">
 	<div class="row">
-        <div class="alert alert-danger fade in" ng-show="errores">{{mensaje}}</div>
-        <div class="alert alert-success fade in" ng-show="exito">{{mensaje}}</div>
+        <div class="alert alert-danger fade in retro" ng-show="errores">{{mensaje}}</div>
+        <div class="alert alert-success fade in retro" ng-show="exito">{{mensaje}}</div>
 	</div>
 	<div class="row">
         <div>
@@ -27,10 +27,10 @@
 				<tr ng-repeat="especie in especies">
 					<td>{{especie.nombreComun}}</td>
 					<td>{{especie.nombreCientifico}}</td>
-					<td>{{especie.estado}}</td>
+					<td>{{especie.idEstadoEspecie}}</td>
 					<td>
 						<a class="btn btn-link"><i class="fa fa-edit fa-2x"></i></a>
-						<a class="btn btn-link"><i class="fa fa-trash fa-2x"></i></a>
+						<a ng-click="eliminarEspecie(especie.idEspecie)" class="btn btn-link"><i class="fa fa-trash fa-2x"></i></a>
 					</td>
 				</tr>
 			</tbody>
