--- a/Clientes/Web/privado/vistas/vistaEspecies.html
+++ b/Clientes/Web/privado/vistas/vistaEspecies.html
@@ -9,7 +9,7 @@
             <select ng-change="actualizarPagina(paginaActual)" ng-options="res for res in resultadosDisponibles" ng-model="resultados">
             </select>
             &nbsp especies
-            <button class="btn btn-link"><i class="fa fa-plus"></i> Agregar nueva especie</button>
+            <button class="btn btn-link" data-toggle="modal" data-target="#agregarEspecie"><i class="fa fa-plus"></i> Agregar nueva especie</button>
         </div>
 	</div>
 	<hr>
@@ -38,7 +38,7 @@
 	</div>
 	    <div class="row">
         <div>
-            Mostrando {{desde}} al {{hasta}} de {{total}} incidentes
+            Mostrando {{desde}} al {{hasta}} de {{total}} especies
         </div>
         <div class="pull-right">
             <a ng-click="actualizarPagina(1)" class="btn btn-link" ng-class="{ disabled: !regresar }"><i class="fa fa-angle-double-left fa-2x"></i></a>
