--- a/Clientes/Web/privado/vistas/vistaEspecies.html
+++ b/Clientes/Web/privado/vistas/vistaEspecies.html
@@ -1,4 +1,4 @@
-<div ng-init="actualizarPagina(1)">
+<div ng-init="obtenerEstadosEspecies(); actualizarPagina(1)">
 	<div class="row">
         <div class="alert alert-danger fade in retro" ng-show="errores">{{mensaje}}</div>
         <div class="alert alert-success fade in retro" ng-show="exito">{{mensaje}}</div>
@@ -24,10 +24,10 @@
 				</tr>
 			</thead>
 			<tbody>
-				<tr ng-repeat="especie in especies">
+				<tr ng-repeat="especie in especies" ng-init="nombreEstadoEspecie(especie.idEstadoEspecie)">
 					<td>{{especie.nombreComun}}</td>
 					<td>{{especie.nombreCientifico}}</td>
-					<td>{{especie.idEstadoEspecie}}</td>
+					<td>{{nombreEstado[$index]}}</td>
 					<td>
 						<a class="btn btn-link"><i class="fa fa-edit fa-2x"></i></a>
 						<a ng-click="eliminarEspecie(especie.idEspecie)" class="btn btn-link"><i class="fa fa-trash fa-2x"></i></a>
