Agrega especie desde 2 vistas

--- a/Clientes/Web/privado/vistas/vistaEspecies.html
+++ b/Clientes/Web/privado/vistas/vistaEspecies.html
@@ -1,3 +1,4 @@
+<div ng-include="'vistas/modalAgregarEspecie.html'"></div>
 <div ng-init="obtenerEstadosEspecies(); actualizarPagina(1)">
 	<div class="row">
         <div class="alert alert-danger fade in retro" ng-show="errores">{{mensaje}}</div>
