--- a/Clientes/Web/privado/vistas/vistaIncidentes.html
+++ b/Clientes/Web/privado/vistas/vistaIncidentes.html
@@ -1,3 +1,4 @@
+<div ng-include="'vistas/modalAgregarEspecie.html'"></div>
 <div ng-init="obtenerEspecies(); actualizarPagina(1)">
     <div class="row">
         <div class="alert alert-danger fade in retro" ng-show="errores">{{mensaje}}</div>
@@ -9,7 +10,7 @@
             <select ng-change="actualizarPagina(paginaActual)" ng-options="res for res in resultadosDisponibles" ng-model="resultados">
             </select>
             &nbsp incidentes
-            <button class="btn btn-link" data-toggle="modal" data-target="#agregarEspecie"><i class="fa fa-plus"></i> Agregar nueva especie</button>
+            <button class="btn btn-link" data-toggle="modal" data-target="#agregarEspecie" ng-click="obtenerEstadosEspecies()"><i class="fa fa-plus"></i> Agregar nueva especie</button>
         </div>
         <div class="pull-right">
             Filtrar por especie:
