--- a/Clientes/Web/privado/vistas/vistaIncidentes.html
+++ b/Clientes/Web/privado/vistas/vistaIncidentes.html
@@ -1,5 +1,5 @@
 <div ng-include="'vistas/modalAgregarEspecie.html'"></div>
-<div ng-init="obtenerEspecies(); actualizarPagina(1)">
+<div ng-init="obtenerEspecies()">
     <div class="row">
         <div class="alert alert-danger fade in retro" ng-show="errores">{{mensaje}}</div>
         <div class="alert alert-success fade in retro" ng-show="exito">{{mensaje}}</div>
@@ -32,7 +32,7 @@
                 </tr>
             </thead>
             <tbody>
-                <tr ng-repeat="incidente in incidentes" ng-init="nombresDeEspecie(incidente.idEspecie)">
+                <tr ng-repeat="incidente in incidentes">
                     <td><img ng-src="{{ 'http://148.243.51.170:8007/obsfauna/public_html/imagenes' + (incidente.rutatdumbnail).split('imagenes')[1] }}"></td>
                     <td ng-hide="editando[$index]">
                         {{nombreEspecie[$index]}}
