--- a/Clientes/Web/privado/vistas/modalAgregarEspecie.html
+++ b/Clientes/Web/privado/vistas/modalAgregarEspecie.html
@@ -7,24 +7,26 @@
                 <h3 class="modal-title">Agregar Especie</h3>
             </div>
             <div class="modal-body">
-                <form>
+                <div class="alert alert-info fade in" ng-hide="formaAgregarEspecie.$valid">Para agregar una especie llena todos los campos</div>
+
+                <form name="formaAgregarEspecie"novalidate>
                     <div class="form-group">
                         <label class="control-label">Nombre Común:</label>
-                        <input type="text" class="form-control" ng-model="nuevaEspecie.nombreComun">
+                        <input type="text" class="form-control" ng-model="nuevaEspecie.nombreComun" required>
                     </div>
                     <div class="form-group">
                         <label class="control-label">Nombre Científico:</label>
-                        <input type="text" class="form-control" ng-model="nuevaEspecie.nombreCientifico">
+                        <input type="text" class="form-control" ng-model="nuevaEspecie.nombreCientifico" required>
                     </div>
                     <div class="form-group">
                         <label class="control-label">Estado:</label>
-                        <select class="form-control" ng-model="nuevaEspecie.idEstadoEspecie" ng-options="estado.idEstadoEspecie as estado.estado for estado in estados"></select>
+                        <select class="form-control" ng-model="nuevaEspecie.idEstadoEspecie" ng-options="estado.idEstadoEspecie as estado.estado for estado in estados" required></select>
+                    </div>
+                    <div class="modal-footer">
+                        <button class="btn btn-default" data-dismiss="modal" ng-click="limpiarEspecie()">Cancelar</button>
+                        <button data-dismiss="modal" ng-class="{ disabled: !formaAgregarEspecie.$valid }" class="btn btn-primary" ng-click="agregarEspecie()">Agregar</button>
                     </div>
                 </form>
-            </div>
-            <div class="modal-footer">
-                <button class="btn btn-default" data-dismiss="modal">Cancelar</button>
-                <button class="btn btn-primary" data-dismiss="modal" ng-click="agregarEspecie()">Agregar</button>
             </div>
         </div>
     </div>
