--- a/Clientes/Web/privado/vistas/modalVerFoto.html
+++ b/Clientes/Web/privado/vistas/modalVerFoto.html
@@ -6,7 +6,7 @@
                 <button class="close" data-dismiss="modal" aria-label="Close"><span aria-hidden="true">&times;</span></button>
             </div>
             <div class="modal-body">
-                <img ng-src="{{ 'http://148.243.51.170:8007/obsfauna/public_html/imagenes' + (rutaFoto).split('imagenes')[1] }}" class="center-block fotoMaxWidth">
+                <img ng-src="{{ (ruta) + (rutaFoto).split('imagenes')[1] }}" class="center-block fotoMaxWidth">
             </div>
         </div>
     </div>
