--- a/Clientes/Web/privado/vistas/vistaEspecies.html
+++ b/Clientes/Web/privado/vistas/vistaEspecies.html
@@ -10,7 +10,7 @@
             <select ng-change="actualizarPagina(paginaActual)" ng-options="res for res in resultadosDisponibles" ng-model="resultados">
             </select>
             &nbsp especies
-            <button class="btn btn-link" data-toggle="modal" data-target="#agregarEspecie"><i class="fa fa-plus"></i> Agregar nueva especie</button>
+            <button class="btn btn-link" data-toggle="modal" data-target="#agregarEspecie" ng-class="{ disabled: editandoEs }"><i class="fa fa-plus"></i> Agregar nueva especie</button>
         </div>
 	</div>
 	<hr>
