--- a/Clientes/Web/privado/index.html
+++ b/Clientes/Web/privado/index.html
@@ -9,6 +9,7 @@
     <link href="css/bootstrap.min.css" rel="stylesheet" />
     <link href="css/sitio.css" rel="stylesheet" />
 ​    <link href="css/bootstrap-select.css" rel="stylesheet" />
+    <link href="css/loading-bar.css" rel="stylesheet" />
 </head>
 <body>
 
@@ -56,6 +57,7 @@
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js"></script>
     <script src="scripts/angular.min.js"></script>
     <script src="scripts/angular-route.min.js"></script>
+    <script src="scripts/loading-bar.js"></script>
     <script src="scripts/bootstrap.min.js"></script>
     <script src="scripts/bs-select/bootstrap-select.js"></script>
     <script src="//ajax.googleapis.com/ajax/libs/angularjs/1.2.16/angular-route.min.js"></script>
