estilo de sitio publico

--- a/Clientes/Web/publico/index.html
+++ b/Clientes/Web/publico/index.html
@@ -13,7 +13,7 @@
 <body>
 
     <!-- Menu -->
-    <nav class="navbar navbar-inverse navbar-fixed-top">
+    <nav class="navbar navbar-fixed-top">
         <div class="container-fluid">
             <div class="navbar-header">
                 <a class="navbar-brand" href="#/inicio">
@@ -52,6 +52,7 @@
     <!-- 3rd party libraries -->
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js"></script>
     <script src="scripts/angular.min.js"></script>
+    <script src="scripts/bootstrap.min.js"></script>
     <script src="scripts/loading-bar.js"></script>
     <script src="//ajax.googleapis.com/ajax/libs/angularjs/1.2.16/angular-route.min.js"></script>
 
