--- a/Clientes/Web/publico/vistas/vistaReportar.html
+++ b/Clientes/Web/publico/vistas/vistaReportar.html
@@ -46,7 +46,7 @@
     <div class="row">
         <div class="col-sm-12">
             <h3>Destino <span class="info"><i class="fa fa-info-circle" title="Municipio más cercano al incidente"></i></span></h3>
-        <div>
+        </div>
         <div class="col-sm-6">
             <div class="form-group">
                 <label>Estado</label>
