--- a/Clientes/Web/privado/index.html
+++ b/Clientes/Web/privado/index.html
@@ -14,11 +14,11 @@
 <body>
 
     <!-- Menu -->
-    <nav class="navbar navbar-inverse navbar-fixed-top">
+    <nav class="navbar navbar-fixed-top">
         <div class="container-fluid">
             <div class="navbar-header">
                 <a class="navbar-brand" href="#/resumen">
-                    <img alt="Brand" src="...">
+                    <img alt="Brand" src="//placehold.it/100x20">
                 </a>
                 <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1" aria-expanded="false">
                     <span class="sr-only">Toggle navigation</span>
