--- a/Clientes/Web/privado/vistas/modalAgregarEspecie.html
+++ b/Clientes/Web/privado/vistas/modalAgregarEspecie.html
@@ -7,7 +7,7 @@
                 <h3 class="modal-title">Agregar Especie</h3>
             </div>
             <div class="modal-body">
-                <div class="alert alert-info fade in" ng-hide="formaAgregarEspecie.$valid">Para agregar una especie llena todos los campos</div>
+                <div class="alert alert-success fade in" ng-hide="formaAgregarEspecie.$valid">Para agregar una especie llena todos los campos</div>
 
                 <form name="formaAgregarEspecie"novalidate>
                     <div class="form-group">
@@ -24,7 +24,7 @@
                     </div>
                     <div class="modal-footer">
                         <button class="btn btn-default" data-dismiss="modal" ng-click="limpiarEspecie()">Cancelar</button>
-                        <button data-dismiss="modal" ng-class="{ disabled: !formaAgregarEspecie.$valid }" class="btn btn-primary" ng-click="agregarEspecie()">Agregar</button>
+                        <button data-dismiss="modal" ng-class="{ disabled: !formaAgregarEspecie.$valid }" class="btn btn-success" ng-click="agregarEspecie()">Agregar</button>
                     </div>
                 </form>
             </div>
