--- a/Clientes/Web/privado/vistas/vistaEspecies.html
+++ b/Clientes/Web/privado/vistas/vistaEspecies.html
@@ -7,7 +7,7 @@
 	<div class="row">
         <div>
             Mostrar: 
-            <select ng-change="actualizarPagina(paginaActual)" ng-options="res for res in resultadosDisponibles" ng-model="resultados">
+            <select ng-change="actualizarPagina(paginaActual)" ng-options="res for res in resultadosDisponibles" ng-model="resultados" class="form-control resultados">
             </select>
             &nbsp especies
             <button class="btn btn-link" data-toggle="modal" data-target="#agregarEspecie" ng-class="{ disabled: editandoEs }"><i class="fa fa-plus"></i> Agregar nueva especie</button>
@@ -15,7 +15,7 @@
 	</div>
 	<hr>
 	<div class="row">
-		<table class="table table-stripedd">
+		<table class="table table-striped">
 			<thead>
 				<tr>
 					<th>Nombre común</th>
@@ -30,19 +30,19 @@
 						{{especie.nombreComun}}
 					</td>
 					<td ng-show="editando[$index]">
-						<input type="text" ng-model="especie.nombreComun">
+						<input type="text" ng-model="especie.nombreComun" class="form-control">
 					</td>
 					<td ng-hide="editando[$index]">
 						{{especie.nombreCientifico}}
 					</td>
 					<td ng-show="editando[$index]">
-						<input type="text" ng-model="especie.nombreCientifico">
+						<input type="text" ng-model="especie.nombreCientifico" class="form-control">
 					</td>
 					<td ng-hide="editando[$index]">
 						{{nombreEstado[$index]}}
 					</td>
 					<td ng-show="editando[$index]">
-						<select ng-model="especie.idEstadoEspecie" ng-options="estado.idEstadoEspecie as estado.estado for estado in estados"></select>
+						<select ng-model="especie.idEstadoEspecie" ng-options="estado.idEstadoEspecie as estado.estado for estado in estados" class="form-control"></select>
 					</td>
 					<td>
                         <a ng-hide="editando[$index]" ng-click="editables($index)" class="btn btn-link" ng-class="{ disabled: editandoEs }"><i class="fa fa-edit fa-2x"></i></a>
